    generated in the same round.

  o BUG-FIX: Water check in gtk1 version no longer tries to
    dereference the difference map active checkbutton - fixes crash
    [Subhangi Ghosh].

  o BUG-FIX: mmCIF file writing fixed.

  o BUG-FIX: refining with structures from .res files sometimes crash
    when writing backup file on Mac [Derek Logan].

  o BUG-FIX: Platinum can now have sensible bonds to N and O [John
    Helliwell].

  o BUG-FIX: Ramachandran plots work at the end of chains chains with
    missing residues [JED].

  o BUG-FIX: Environment distances display toggling anomolies cleaned
    up [Ed Pozharski].

  o BUG-FIX: Sequence view failed with SHELX molecules with high
    residue numbers [Stefan Becker].

  o BUG-FIX: SSM superposition now superposes the correct molecules
    when the option menus are not adjusted [Sam Stampfter].

-----

  Release 0.6.1

  o FEATURE: Quick-save - bound to Ctrl-S.

  o FEATURE: Binary updates (pre-releases) now available. 

  o FEATURE: tutorial data can be loaded from a Extensions menu item

  o FEATURE: A means to set the refinement weight so that the
    resulting chi squareds are 1.0 (or close) [Katya Heldwein]

  o CHANGE: "Save dialog positions" now also saves the Edit Chi Angles
    dialog position [Markus Rudolph].

  o CHANGE: Coot can now go through proxies (http_proxy environment
    variable) to get News and Updates.

  o CHANGE: Baton manipulation is now possible when the skeleton runs
    out.

  o CHANGE: Hydrogen representation now thin and grey monotone.

  o CHANGE: Interface to sidechain docking improved [Phil Evans].

  o CHANGE: Updates to sync with new EDS (Electron Density Server).

  o CHANGE: Filenames of mtzs and pdb in the current directory are now
    stored as relative in the state file [Andre White].

  o CHANGE: Default image type for screenshot is now PNG [Joel Bard].

  o CHANGE: --python --no-graphics results in a python prompt at the 
    command line [Gabor Bunkoczi].
